Added JWT-based Refresh Token functionality for improved security and enhanced user experience.